nginx-stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ns-1
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: nginx
  clusterIP: None
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  namespace: ns-1
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: san360/nginxhello_stateful:1.6
        ports:
        - containerPort: 80
          name: nginx
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /pod-readiness.sh
          initialDelaySeconds: 5
          periodSeconds: 5
      nodeSelector:
        kubernetes.io/os: linux
